force-app/main/default/objects/Event_Attendee_vod__c/fields/Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Status_vod__c</fullName>
    <description>Status of the person invited to the medical event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed_vod</fullName>
            </value>
            <value>
                <fullName>Cleared_Signature_vod</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>