force-app/main/default/objects/Event_Attendee_vod__c/fields/Talk_Title_vod__c.field-meta.xml
<CustomField>
    <fullName>Talk_Title_vod__c</fullName>
    <description>Title of the talk given at the event</description>
    <label>Talk Title</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>