force-app/main/default/objects/Event_Attendee_vod__c/fields/User_vod__c.field-meta.xml
<CustomField>
    <fullName>User_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User attending the event.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Attendee_vod</relationshipName>
    <type>Lookup</type>
</CustomField>