force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Ausente__c.field-meta.xml
<CustomField>
    <fullName>VIA_Ausente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ausente</label>
    <type>Checkbox</type>
</CustomField>