force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Event_HCP__c.field-meta.xml
<CustomField>
    <fullName>VIA_Event_HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event HCP</label>
    <referenceTo>Event_HCP__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>