force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_HCP_Specialty__c.field-meta.xml
<CustomField>
    <fullName>VIA_HCP_Specialty__c</fullName>
    <formula>Account_vod__r.OneKey_Specialty1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Specialty</label>
    <type>Text</type>
</CustomField>