force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_HIPPO_Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIPPO_Event_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIPPO Event Attendee</label>
    <type>Checkbox</type>
</CustomField>