force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Hippo_Interaction__c.field-meta.xml
<CustomField>
    <fullName>VIA_Hippo_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Hippo_Interaction__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>