force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Hippo_Source__c.field-meta.xml
<CustomField>
    <fullName>VIA_Hippo_Source__c</fullName>
    <description>Formula field that show the source the Event Attendee was created from (Event HCP or Interaction).</description>
    <formula>IF(NOT(ISBLANK(VIA_Event_HCP__c)),&apos;Event HCP&apos;, IF(NOT(ISBLANK(VIA_Hippo_Interaction__c)),&apos;Hippo Interaction&apos;, null))</formula>
    <label>Hippo Source</label>
    <type>Text</type>
</CustomField>