force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Motivo_de_la_Ausencia__c.field-meta.xml
<CustomField>
    <fullName>VIA_Motivo_de_la_Ausencia__c</fullName>
    <label>Motivo de la Ausencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enfermedad/Indisposición</fullName>
            </value>
            <value>
                <fullName>Incompatibilidad con horario laboral</fullName>
            </value>
            <value>
                <fullName>No Interesado/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>