force-app/main/default/objects/Event_Attendee_vod__c/fields/VIA_Speaker__c.field-meta.xml
<CustomField>
    <fullName>VIA_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker?</label>
    <type>Checkbox</type>
</CustomField>