force-app/main/default/objects/Event_Attendee_vod__c/fields/Walk_In_Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Status_vod__c</fullName>
    <description>Used to track the status of walk-in attendees at an event.</description>
    <label>Walk-In Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needs_Reconciliation_vod</fullName>
            </value>
            <value>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </value>
            <value>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </value>
            <value>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </value>
            <value>
                <fullName>Dismissed_vod</fullName>
            </value>
            <value>
                <fullName>Reconciled_To_Customer_Master_vod</fullName>
            </value>
            <value>
                <fullName>Pending_Verification_vod</fullName>
            </value>
            <value>
                <fullName>Reconciliation_Rejected_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>