force-app/main/default/objects/Event_Attendee_vod__c/fields/Walk_In_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Type_vod__c</fullName>
    <description>Walk-In Types to be captured during digital sign in by attendees.</description>
    <label>Walk-In Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescriber_vod</fullName>
                <label>Prescriber</label>
            </value>
            <value>
                <fullName>Non_Prescriber_vod</fullName>
                <label>Non-Prescriber</label>
            </value>
            <value>
                <fullName>Other_vod</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>