force-app/main/default/objects/Event_Attendee_vod__c/fields/Zip_vod__c.field-meta.xml
<CustomField>
    <fullName>Zip_vod__c</fullName>
    <description>Used to store the attendee&apos;s zip code.</description>
    <label>Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>