force-app/main/default/objects/Event_Attendee_vod__c/recordTypes/EPD_FR_MED_Attendee.recordType-meta.xml
<RecordType>
    <fullName>EPD_FR_MED_Attendee</fullName>
    <active>true</active>
    <description>19-March-2014-CV: Medical France, created for requirement R-0901</description>
    <label>FR MED Attendee</label>
</RecordType>