force-app/main/default/objects/Event_Attendee_vod__c/recordTypes/Event_Attendee_vod.recordType-meta.xml
<RecordType>
    <fullName>Event_Attendee_vod</fullName>
    <active>true</active>
    <description>Standard record type for Event Attendees</description>
    <label>Event_Attendee_vod</label>
</RecordType>