force-app/main/default/objects/Event_Attendee_vod__c/recordTypes/Hippo_Event_Attendee.recordType-meta.xml
<RecordType>
    <fullName>Hippo_Event_Attendee</fullName>
    <active>true</active>
    <description>Attendees added to events created from Hippo.</description>
    <label>Hippo Event Attendee</label>
</RecordType>