force-app/main/default/objects/Event_Attendee_vod__c/recordTypes/UK_Attendee.recordType-meta.xml
<RecordType>
    <fullName>UK_Attendee</fullName>
    <active>true</active>
    <description>20131117 CV - UK Record Type for Event Attendees</description>
    <label>UK Attendee</label>
</RecordType>