force-app/main/default/objects/Event_Attendee_vod__c/validationRules/Multiple_Attendees_vod.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiple_Attendees_vod</fullName>
    <active>true</active>
    <description>This validation Rule will confirm that only one Account or Contact or User is selected as the Attendee.</description>
    <errorConditionFormula>(
 IF(ISBLANK(Account_vod__c),1,0)
 + IF(ISBLANK(User_vod__c),1,0)
 + IF(ISBLANK(Contact_vod__c),1,0)
) &lt; 2</errorConditionFormula>
    <errorMessage>Please select only one Account, Contact, or User.</errorMessage>
</ValidationRule>