force-app/main/default/objects/Event_Attendee_vod__c/validationRules/MYL_Add_Only_Active_Attendee.validationRule-meta.xml
<ValidationRule>
    <fullName>MYL_Add_Only_Active_Attendee</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Medical_Event_vod__r.RecordType.DeveloperName = &apos;MYL_FR_Pharma_Medical_Event&apos;,NOT(ISBLANK(   Account_vod__c  )),ISBLANK(Account_vod__r.MYL_Activity_ID__c ))</errorConditionFormula>
    <errorMessage>You can only add Active Professionals</errorMessage>
</ValidationRule>