force-app/main/default/objects/Event_Attendee_vod__c/validationRules/MYL_Check_Attendee_Count_with_RPPS_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>MYL_Check_Attendee_Count_with_RPPS_ID</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Medical_Event_vod__r.MYL_Total_Event_Attendee_with_RPPS_ID__c &gt; 4,Medical_Event_vod__r.RecordType.DeveloperName = &apos;MYL_FR_Pharma_Medical_Event&apos;, ISPICKVAL(Medical_Event_vod__r.Event_Type__c,&apos;Opportunity&apos;), NOT(ISBLANK(Account_vod__r.External_ID_vod__c)) )</errorConditionFormula>
    <errorMessage>Maximum 4 authorized health professionals</errorMessage>
</ValidationRule>