force-app/main/default/objects/Event_Attendee_vod__c/validationRules/Restrict_Delete_ES.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Delete_ES</fullName>
    <active>true</active>
    <errorConditionFormula>Medical_Event_vod__r.MYL_Country_Code__c = &apos;ES&apos; &amp;&amp;  ES_Is_Owner__c = true</errorConditionFormula>
    <errorMessage>Only owner can delete the record</errorMessage>
</ValidationRule>