force-app/main/default/objects/Event_Attendee_vod__c/validationRules/VIA_ES_Prevent_Attendee_Completed_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>VIA_ES_Prevent_Attendee_Completed_Event</fullName>
    <active>true</active>
    <description>Prevent to add attendees to completed hippo events</description>
    <errorConditionFormula>AND(
Medical_Event_vod__r.RecordType.DeveloperName = &apos;ES_Completed_Hippo_Event&apos;, 
ISBLANK(PRIORVALUE(CreatedDate))
)</errorConditionFormula>
    <errorMessage>You cannot add an attendee to a Completed Event.</errorMessage>
</ValidationRule>